[package]
name = "is31fl3743b-driver-examples"
version = "0.1.0"
license = "MIT"
description = "STM32F411 Example for the IS31F13743B LED matrix controller."
edition = "2021"
rust-version = "1.75"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", features = ["defmt" ] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.8.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}
embedded-hal-async = "1.0.0"
embassy-embedded-hal = "0.2.0"
is31fl3743b-driver = { version = "0.1.0", path = "../"}

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441" }
